--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="navi">
+        <div class="nav">
             <ul class="buttons">
                 <li>
                     <a href="">Home</a>
