--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="">Projects</a>
                 </li>
                 <li>
-                    <a href="">contact</a>
+                    <a href="">Contact</a>
                 </li>
             </ul>
             <div class="burger-icon">
