--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
     </header>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.12/jquery.transit.min.js"></script>
 <script>
     const burgerIcon = document.querySelector('#hamburger-icon');
     const headerButtons = document.querySelector('.buttons');
