--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             </div>
         </div>
     </header>
+    <h1 class="title1">Hey, I'm Otto Nuum</h1>
+    <div class="text">
+        <p></p>
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.12/jquery.transit.min.js"></script>
