--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
             </div>
         </div>
     </header>
-    <h1 class="title1">Hey, I'm Otto Nuum</h1>
-    <div class="text">
-        <p></p>
+    <div class="section1">
+        <h1 class="title1">Hey, I'm Otto Nuum</h1>
+        <div class="text1">
+        <p>Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
+        <div class="project_button">
+            <button class="project">Projects</button>
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
