--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <div class="project_button">
             <button class="project">Projects</button>
         </div>
+        </div>
+    </div>
+    <div class="section2">
+        <h1 class="title2">About me</h1>
+        <div class="about_me">Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
