--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
     </div>
     <div class="section2">
         <h1 class="title2">About me</h1>
-        <div class="about_me">Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</div>
+        <div class="text1">
+        <div class="about_me">
+            <p> Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
+        </div>
+        <div class="contact_button">
+            <button class="contact">Contact</button>
+        </div>
+    </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
