--- a/index.html
+++ b/index.html
@@ -35,22 +35,30 @@
     <div class="section1">
         <h1 class="title1">Hey, I'm Otto Nuum</h1>
         <div class="text1">
-        <p>Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
+        <p>An enthusiastic junior software developer with a passion for learning and creating. Continuously expanding their skill set by exploring various coding languages, and applying their knowledge to develop innovative and exciting projects.</p>
         <div class="project_button">
             <button class="project">Projects</button>
         </div>
         </div>
     </div>
     <div class="section2">
-        <h1 class="title2">About me</h1>
+        <h1 class="title1">About me</h1>
         <div class="text1">
         <div class="about_me">
-            <p> Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
+            <p>Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
         </div>
         <div class="contact_button">
             <button class="contact">Contact</button>
         </div>
+        </div>
     </div>
+    <div class="section3">
+        <h1 class="title1">Projects</h1>
+        <div class="img1">
+            <img src="Screenshot_1.png" alt="">
+            <p></p>
+        </div>
+            <p></p>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
