--- a/index.html
+++ b/index.html
@@ -55,10 +55,23 @@
     <div class="section3">
         <h1 class="title1">Projects</h1>
         <div class="img1">
-            <img src="Screenshot_1.png" alt="">
-            <p></p>
+            <a href="https://github.com/Ottonuum/Delfi">
+                <img src="Screenshot_1.png" alt="">
+            </a>
+            <p class="text1">I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
         </div>
-            <p></p>
+        <div class="img1">
+            <a href="https://github.com/Ottonuum/gitlab">
+                <img src="Screenshot_2.png" alt="">
+            </a>
+            <p>I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
+        </div>
+        <div class="img1">
+            <a href="https://github.com/Ottonuum/portfolio">
+                <img src="Screenshot_3.png" alt="">
+            </a>
+            <p>I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
