--- a/index.html
+++ b/index.html
@@ -64,15 +64,31 @@
             <a href="https://github.com/Ottonuum/gitlab">
                 <img src="Screenshot_2.png" alt="">
             </a>
-            <p>I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
+            <p class="text1">I re-created Gitlab page. The pictures are clickable and they will take you to my github</p>
         </div>
         <div class="img1">
             <a href="https://github.com/Ottonuum/portfolio">
                 <img src="Screenshot_3.png" alt="">
             </a>
-            <p>I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
+            <p class="text1">I made a website taking the design from figma (a bit broken header)</p>
+        <div class="contact2">
+            <h1 class="title1">Contact</h1>
+            <ul class="ul1">
+                <li class="li1">
+                    <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
+                </li>
+                <li class="li1">
+                    <a href="" class="text1"> phone: +37258930014</a>
+                </li>
+            </ul>
+        </div>
         </div>
     </div>
+    <footer>
+        <div class="foot">
+            <p class="white">copyright 2023. Made by Otto Nuum</p>
+        </div>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.12/jquery.transit.min.js"></script>
