--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <div class="nav">
+        <div class="nav" id="home">
             <a href="">Otto Nuum</a>
             <ul class="buttons">
                 <li>
-                    <a href="">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="">About</a>
+                    <a href="#about_me">About</a>
                 </li>
                 <li>
-                    <a href="">Projects</a>
+                    <a href="#prjct">Projects</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="#con">Contact</a>
                 </li>
             </ul>
             <div id="hamburger-icon" class="ham">
@@ -37,23 +37,27 @@
         <div class="text1">
         <p>An enthusiastic junior software developer with a passion for learning and creating. Continuously expanding their skill set by exploring various coding languages, and applying their knowledge to develop innovative and exciting projects.</p>
         <div class="project_button">
-            <button class="project">Projects</button>
+            <button class="project">
+                <a href="#prjct">Projects</a>
+            </button>
         </div>
         </div>
     </div>
     <div class="section2">
-        <h1 class="title1">About me</h1>
+        <h1 class="title1" id="about_me">About me</h1>
         <div class="text1">
         <div class="about_me">
             <p>Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
         </div>
         <div class="contact_button">
-            <button class="contact">Contact</button>
+            <button class="contact">
+                <a href="#con">Contact</a>
+            </button>
         </div>
         </div>
     </div>
     <div class="section3">
-        <h1 class="title1">Projects</h1>
+        <h1 class="title1" id="prjct">Projects</h1>
         <div class="img1">
             <a href="https://github.com/Ottonuum/Delfi">
                 <img src="Screenshot_1.png" alt="">
@@ -72,7 +76,7 @@
             </a>
             <p class="text1">I made a website taking the design from figma (a bit broken header)</p>
         <div class="contact2">
-            <h1 class="title1">Contact</h1>
+            <h1 class="title1" id="con">Contact</h1>
             <ul class="ul1">
                 <li class="li1">
                     <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
