--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             </button>
         </div>
         </div>
+        <div>
+            <h2>My skills</h2>
+        </div>
     </div>
     <div class="section3">
         <h1 class="title1" id="prjct">Projects</h1>
@@ -77,13 +80,10 @@
             <p class="text1">I made a website taking the design from figma (a bit broken header)</p>
         <div class="contact2">
             <h1 class="title1" id="con">Contact</h1>
-            <ul class="ul1">
-                <li class="li1">
-                    <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
-                </li>
-                <li class="li1">
-                    <a href="" class="text1"> phone: +37258930014</a>
-                </li>
+            <div class="white_a">
+                <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
+                <a href="" class="text1"> phone: +37258930014</a>
+            </div>
             </ul>
         </div>
         </div>
