--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>
                     <a href="#prjct">Projects</a>
                 </li>
-                <li>
+                <li class="bot_line">
                     <a href="#con">Contact</a>
                 </li>
             </ul>
@@ -38,7 +38,7 @@
         <p>An enthusiastic junior software developer with a passion for learning and creating. Continuously expanding their skill set by exploring various coding languages, and applying their knowledge to develop innovative and exciting projects.</p>
         <div class="project_button">
             <button class="project">
-                <a href="#prjct">Projects</a>
+                <a href="#prjct">PROJECTS</a>
             </button>
         </div>
         </div>
@@ -54,9 +54,6 @@
                 <a href="#con">Contact</a>
             </button>
         </div>
-        </div>
-        <div>
-            <h2>My skills</h2>
         </div>
     </div>
     <div class="section3">
@@ -78,12 +75,14 @@
                 <img src="Screenshot_3.png" alt="">
             </a>
             <p class="text1">I made a website taking the design from figma (a bit broken header)</p>
+            </div>
+    <div class="section4">
         <div class="contact2">
             <h1 class="title1" id="con">Contact</h1>
             <div class="white_a">
                 <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
                 <a href="" class="text1"> phone: +37258930014</a>
-            </div>
+    </div>
             </ul>
         </div>
         </div>
