--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="nav" id="home">
+        <div class="nav">
             <a href="">Otto Nuum</a>
             <ul class="buttons">
                 <li>
@@ -32,8 +32,8 @@
             </div>
         </div>
     </header>
-    <div class="section1">
-        <h1 class="title1">Hey, I'm Otto Nuum</h1>
+    <div class="section1" id="home">
+        <h1 class="title1" href="#home" id="big">Hey, I'm Otto Nuum</h1>
         <div class="text1">
         <p>An enthusiastic junior software developer with a passion for learning and creating. Continuously expanding their skill set by exploring various coding languages, and applying their knowledge to develop innovative and exciting projects.</p>
         <div class="project_button">
@@ -60,7 +60,7 @@
         <h1 class="title1" id="prjct">Projects</h1>
         <div class="img1">
             <a href="https://github.com/Ottonuum/Delfi">
-                <img src="Screenshot_1.png" alt="">
+                <img src="Screenshot_4.png" alt="">
             </a>
             <p class="text1">I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
         </div>
@@ -89,7 +89,8 @@
     </div>
     <footer>
         <div class="foot">
-            <p class="white">copyright 2023. Made by Otto Nuum</p>
+            <p class="white">
+                &copy Copyright 2023. Made by Otto Nuum</p>
         </div>
     </footer>
 </body>
