--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <div class="nav">
+            <div class="left">
+            <img src="image.png" alt="">
             <a href="">Otto Nuum</a>
+            </div>
             <ul class="buttons">
                 <li>
                     <a href="#home">Home</a>
@@ -33,7 +36,7 @@
         </div>
     </header>
     <div class="section1" id="home">
-        <h1 class="title1" href="#home" id="big">Hey, I'm Otto Nuum</h1>
+        <h1 class="title1" href="#home" id="ig">Hey, I'm Otto Nuum</h1>
         <div class="text1">
         <p>An enthusiastic junior software developer with a passion for learning and creating. Continuously expanding their skill set by exploring various coding languages, and applying their knowledge to develop innovative and exciting projects.</p>
         <div class="project_button">
@@ -47,7 +50,7 @@
         <h1 class="title1" id="about_me">About me</h1>
         <div class="text1">
         <div class="about_me">
-            <p>Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages.</p>
+            <p class="wider">Hello, I am a first-year junior software developer. I am very passionate about programming and software development and have learned HTML/CSS and Python programming languages, which have provided me with a strong foundation in web development and general-purpose programming. Additionally, I am currently expanding my skills by learning Java, which is widely used in enterprise applications and Android development.</p>
         </div>
         <div class="contact_button">
             <button class="contact">
@@ -62,29 +65,30 @@
             <a href="https://github.com/Ottonuum/Delfi">
                 <img src="Screenshot_4.png" alt="">
             </a>
-            <p class="text1">I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
+            <p class="text2">I re-created Delfi page. The pictures are clickable and they will take you to my github</p>
         </div>
         <div class="img1">
             <a href="https://github.com/Ottonuum/gitlab">
                 <img src="Screenshot_2.png" alt="">
             </a>
-            <p class="text1">I re-created Gitlab page. The pictures are clickable and they will take you to my github</p>
+            <p class="text2">I re-created Gitlab page. The pictures are clickable and they will take you to my github</p>
         </div>
         <div class="img1">
             <a href="https://github.com/Ottonuum/portfolio">
                 <img src="Screenshot_3.png" alt="">
             </a>
-            <p class="text1">I made a website taking the design from figma (a bit broken header)</p>
-            </div>
+            <p class="text2">I made a website taking the design from figma (a bit broken header)</p>
+        </div>
+    </div>
     <div class="section4">
         <div class="contact2">
             <h1 class="title1" id="con">Contact</h1>
             <div class="white_a">
-                <a href="" class="text1"> email: otto.nuum@ametikool.ee</a>
-                <a href="" class="text1"> phone: +37258930014</a>
-    </div>
-            </ul>
-        </div>
+                <a href="" class="text1"> Email: otto.nuum@ametikool.ee</a>
+                <a href="" class="text1"> Phone: +37258930014</a>
+                <a href="">Github: Ottonuum</a>
+                <a href="">Facebook: Otto Nuum</a>
+            </div>
         </div>
     </div>
     <footer>
