--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
             <div class="white_a">
                 <a href="" class="text1"> Email: otto.nuum@ametikool.ee</a>
                 <a href="" class="text1"> Phone: +37258930014</a>
-                <a href="">Github: Ottonuum</a>
-                <a href="">Facebook: Otto Nuum</a>
+                <i class="fa-brands fa-github"></i>
+                <a href="" class="text1">Github: Ottonuum</a>
+                <a href="" class="text1">Facebook: Otto Nuum</a>
             </div>
         </div>
     </div>
@@ -109,4 +110,5 @@
     });
 </script>
 <script src="java.js"></script>
+<script src="https://kit.fontawesome.com/d92828ceae.js" crossorigin="anonymous"></script>
 </html>
